# SpaceInvaders

./: .gitignore  CMakeLists.txt  LICENSE  README.md  settings.ini
Assets/: test.map
Include/: AssetManager.h  AudioManager.h  CollisionManager.h  CommonStructs.h  Enemy.h  Enums.h  Game.h  GameManager.h  GameObject.h  InputManager.h  LevelManager.h  MainMenu.h  Map.h  Player.h  Text.h  TextManager.h  TextureManager.h  Vector2D.h
Include/ECS/: Animation.h  ColliderComponent.h  Components.h  ECS.cpp  ECS.h  EnemyAIComponent.h  PlayerComponent.h  PlayerInputComponent.h  ProjectileComponent.h  SpriteComponent.h  StatComponent.h  TileComponent.h  TransformComponent.h
Scripts/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  CollisionManager.h  Enums.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  InputManager.cpp  InputManager.h  MainMenu.h  Map.cpp  Map.h  Text.cpp  Text.h  TextManager.h  Vector2D.cpp
Scripts/ECS/: ColliderComponent.h  ECS.cpp  EnemyAIComponent.h  PlayerComponent.h  ProjectileComponent.h  SpriteComponent.h  TransformComponent.h
Src/: AssetManager.cpp  AudioManager.cpp  CollisionManager.cpp  Enemy.cpp  Game.cpp  GameManager.cpp  GameObject.cpp  InputManager.cpp  LevelManager.cpp  Main.cpp  MainMenu.cpp  Map.cpp  Player.cpp  Text.cpp  TextManager.cpp  TextureManager.cpp  Vector2D.cpp
